--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Philipp Hecht",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.3.0-alpha.1",
+    "react": "^17.0.0",
     "react-native": "0.54.3",
     "react-native-fs":"^2.3.2",
     "react-native-doc-viewer": "2.7.8"
